--- a/Example/Chat Input/CustomChatInputButton.xib
+++ b/Example/Chat Input/CustomChatInputButton.xib
@@ -6,112 +6,92 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomChatInputButton" customModule="Example" customModuleProvider="target">
             <connections>
-                <outlet property="constraintInputButtonHeight" destination="RqN-fR-jlr" id="jhb-YF-cR6"/>
+                <outlet property="buttonAnswer" destination="j6r-Pi-rDK" id="Q50-cm-0OO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tol-qL-6jb">
             <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Klz-vq-8bI">
-                    <rect key="frame" x="325" y="0.0" width="50" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="D18-Me-bWG"/>
-                        <constraint firstAttribute="height" constant="50" id="zna-Ml-hG8"/>
-                    </constraints>
-                    <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <state key="normal" image="send"/>
-                    <connections>
-                        <action selector="clickSend:" destination="-1" eventType="touchUpInside" id="Fx4-z4-xXw"/>
-                    </connections>
-                </button>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cRT-kd-cOs">
-                    <rect key="frame" x="50" y="10" width="275" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Oc2-MZ-wH4"/>
-                    </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
-                            <real key="value" value="15"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidths">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="leftBorderWidth">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="topBorderWidth">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="rightBorderWidth">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="bottomBorderWidth">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" red="0.82533193010000006" green="0.82533193010000006" blue="0.82533193010000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j6r-Pi-rDK">
-                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="PbX-LL-diT"/>
-                        <constraint firstAttribute="width" constant="50" id="or2-JW-awn"/>
-                    </constraints>
+                    <rect key="frame" x="15" y="5" width="345" height="34"/>
                     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <state key="normal" image="attach"/>
+                    <state key="normal" title="Answer">
+                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                     <connections>
                         <action selector="clickAttachment:" destination="-1" eventType="touchUpInside" id="6od-Ma-YRT"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edx-B2-Gwd">
-                    <rect key="frame" x="0.0" y="219" width="375" height="0.0"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KWD-KQ-ptz">
-                            <rect key="frame" x="164" y="70" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Button"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0j-O8-4dX">
-                            <rect key="frame" x="291" y="70" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Button"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H44-bQ-xkb">
-                            <rect key="frame" x="44" y="70" width="46" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Button"/>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" id="RqN-fR-jlr"/>
-                    </constraints>
-                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XSx-rO-pI0">
+                    <rect key="frame" x="15" y="65" width="172.5" height="34"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Answer A">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="clickAnswerA:" destination="-1" eventType="touchUpInside" id="prF-hp-Tmf"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PlK-fZ-xNO">
+                    <rect key="frame" x="187.5" y="65" width="172.5" height="34"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Answer C">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="clickAnswerC:" destination="-1" eventType="touchUpInside" id="eXN-yB-T1P"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7C-vy-gob">
+                    <rect key="frame" x="15" y="131" width="172.5" height="34"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Answer B">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="clickAnswerB:" destination="-1" eventType="touchUpInside" id="ErD-Gl-J24"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTE-aa-qgX">
+                    <rect key="frame" x="187.5" y="131" width="172.5" height="34"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Answer D">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="clickAnswerD:" destination="-1" eventType="touchUpInside" id="Obg-8w-qbQ"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="cRT-kd-cOs" firstAttribute="leading" secondItem="j6r-Pi-rDK" secondAttribute="trailing" id="H7y-9N-ZsT"/>
-                <constraint firstItem="edx-B2-Gwd" firstAttribute="trailing" secondItem="EPy-ue-nmy" secondAttribute="trailing" id="HIK-DU-ZJT"/>
-                <constraint firstItem="j6r-Pi-rDK" firstAttribute="top" secondItem="EPy-ue-nmy" secondAttribute="top" id="SFT-gx-HJ8"/>
-                <constraint firstItem="cRT-kd-cOs" firstAttribute="top" secondItem="EPy-ue-nmy" secondAttribute="top" constant="10" id="T42-0i-O3Y"/>
-                <constraint firstItem="edx-B2-Gwd" firstAttribute="leading" secondItem="EPy-ue-nmy" secondAttribute="leading" id="ZC5-ne-dnp"/>
-                <constraint firstItem="edx-B2-Gwd" firstAttribute="bottom" secondItem="EPy-ue-nmy" secondAttribute="bottom" id="een-Rc-Yx6"/>
-                <constraint firstItem="Klz-vq-8bI" firstAttribute="trailing" secondItem="EPy-ue-nmy" secondAttribute="trailing" id="fks-1R-o0k"/>
-                <constraint firstItem="Klz-vq-8bI" firstAttribute="top" secondItem="EPy-ue-nmy" secondAttribute="top" id="gnP-qa-ZLT"/>
-                <constraint firstItem="j6r-Pi-rDK" firstAttribute="leading" secondItem="EPy-ue-nmy" secondAttribute="leading" id="kgQ-hG-nsN"/>
-                <constraint firstItem="Klz-vq-8bI" firstAttribute="leading" secondItem="cRT-kd-cOs" secondAttribute="trailing" id="phh-Gp-PwL"/>
+                <constraint firstItem="PlK-fZ-xNO" firstAttribute="trailing" secondItem="j6r-Pi-rDK" secondAttribute="trailing" id="3UY-uI-OBi"/>
+                <constraint firstItem="O7C-vy-gob" firstAttribute="centerX" secondItem="XSx-rO-pI0" secondAttribute="centerX" id="5YL-Md-aB3"/>
+                <constraint firstItem="pTE-aa-qgX" firstAttribute="width" secondItem="XSx-rO-pI0" secondAttribute="width" id="8Qz-zs-nel"/>
+                <constraint firstItem="j6r-Pi-rDK" firstAttribute="top" secondItem="EPy-ue-nmy" secondAttribute="top" constant="5" id="CsX-9F-DYh"/>
+                <constraint firstItem="j6r-Pi-rDK" firstAttribute="leading" secondItem="EPy-ue-nmy" secondAttribute="leading" constant="15" id="Ge2-NL-jGZ"/>
+                <constraint firstItem="PlK-fZ-xNO" firstAttribute="width" secondItem="XSx-rO-pI0" secondAttribute="width" id="LsR-NI-rBN"/>
+                <constraint firstItem="PlK-fZ-xNO" firstAttribute="height" secondItem="XSx-rO-pI0" secondAttribute="height" id="MSC-6S-iZw"/>
+                <constraint firstItem="O7C-vy-gob" firstAttribute="top" secondItem="XSx-rO-pI0" secondAttribute="bottom" constant="32" id="Tq7-S3-bA6"/>
+                <constraint firstItem="pTE-aa-qgX" firstAttribute="height" secondItem="XSx-rO-pI0" secondAttribute="height" id="VfF-x0-zWK"/>
+                <constraint firstItem="pTE-aa-qgX" firstAttribute="trailing" secondItem="j6r-Pi-rDK" secondAttribute="trailing" id="WqO-4s-YpM"/>
+                <constraint firstItem="O7C-vy-gob" firstAttribute="height" secondItem="XSx-rO-pI0" secondAttribute="height" id="ari-bm-74l"/>
+                <constraint firstItem="XSx-rO-pI0" firstAttribute="top" secondItem="j6r-Pi-rDK" secondAttribute="bottom" constant="26" id="cyF-Th-zda"/>
+                <constraint firstItem="PlK-fZ-xNO" firstAttribute="top" secondItem="j6r-Pi-rDK" secondAttribute="bottom" constant="26" id="dIq-6e-biZ"/>
+                <constraint firstItem="XSx-rO-pI0" firstAttribute="height" secondItem="j6r-Pi-rDK" secondAttribute="height" id="f7A-Uc-t1P"/>
+                <constraint firstItem="XSx-rO-pI0" firstAttribute="leading" secondItem="j6r-Pi-rDK" secondAttribute="leading" id="gft-q0-Eoc"/>
+                <constraint firstItem="O7C-vy-gob" firstAttribute="width" secondItem="XSx-rO-pI0" secondAttribute="width" id="kIh-3a-OMG"/>
+                <constraint firstItem="pTE-aa-qgX" firstAttribute="top" secondItem="O7C-vy-gob" secondAttribute="top" id="rJ1-iF-Fzk"/>
+                <constraint firstItem="EPy-ue-nmy" firstAttribute="trailing" secondItem="j6r-Pi-rDK" secondAttribute="trailing" constant="15" id="xKA-qb-iwA"/>
+                <constraint firstItem="XSx-rO-pI0" firstAttribute="width" secondItem="j6r-Pi-rDK" secondAttribute="width" multiplier="0.5" id="y7u-1f-oMq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="EPy-ue-nmy"/>
@@ -129,8 +109,4 @@
             <point key="canvasLocation" x="219.5" y="-351.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="attach" width="21" height="21"/>
-        <image name="send" width="28" height="28"/>
-    </resources>
 </document>
