--- a/QiscusUI/Controllers/Chat View/ChatTitleView.xib
+++ b/QiscusUI/Controllers/Chat View/ChatTitleView.xib
@@ -6,37 +6,69 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatTitleView" customModule="QiscusUI" customModuleProvider="target">
+            <connections>
+                <outlet property="imageViewAvatar" destination="x4w-M4-Qzq" id="NPp-wz-E4Z"/>
+                <outlet property="labelSubtitle" destination="8np-gj-3s0" id="SI7-TJ-YBq"/>
+                <outlet property="labelTitle" destination="Ymu-7h-EyA" id="4b1-6b-QKV"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
+        <view clipsSubviews="YES" contentMode="left" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="x4w-M4-Qzq">
-                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                    <rect key="frame" x="0.0" y="2" width="86" height="86"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="x4w-M4-Qzq" secondAttribute="height" multiplier="1:1" id="EzP-ZQ-LvP"/>
+                    </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ymu-7h-EyA">
-                    <rect key="frame" x="70" y="0.0" width="305" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ymu-7h-EyA" userLabel="Title">
+                    <rect key="frame" x="93" y="2" width="282" height="43"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8np-gj-3s0" userLabel="Subtitle">
+                    <rect key="frame" x="93" y="45" width="282" height="43"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="................................................." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9A-KJ-Mpw" userLabel="border">
+                    <rect key="frame" x="93" y="88" width="282" height="16"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" red="0.29434597489999997" green="0.69504964349999998" blue="0.58424794670000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="Ymu-7h-EyA" firstAttribute="leading" secondItem="x4w-M4-Qzq" secondAttribute="trailing" constant="7" id="2yW-To-klp"/>
+                <constraint firstItem="X9A-KJ-Mpw" firstAttribute="trailing" secondItem="8np-gj-3s0" secondAttribute="trailing" id="6HQ-yY-dMT"/>
+                <constraint firstItem="X9A-KJ-Mpw" firstAttribute="leading" secondItem="8np-gj-3s0" secondAttribute="leading" id="GSw-sD-95z"/>
+                <constraint firstItem="x4w-M4-Qzq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="L2G-fZ-gTQ"/>
+                <constraint firstItem="8np-gj-3s0" firstAttribute="bottom" secondItem="x4w-M4-Qzq" secondAttribute="bottom" id="MWp-lP-wd8"/>
+                <constraint firstItem="8np-gj-3s0" firstAttribute="leading" secondItem="Ymu-7h-EyA" secondAttribute="leading" id="OOn-bX-h8K"/>
+                <constraint firstItem="x4w-M4-Qzq" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" constant="-2" id="Sn8-ap-Y7e"/>
                 <constraint firstItem="Ymu-7h-EyA" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Zzx-dG-PML"/>
-                <constraint firstItem="Ymu-7h-EyA" firstAttribute="leading" secondItem="x4w-M4-Qzq" secondAttribute="trailing" constant="10" id="hNS-bx-Qfy"/>
-                <constraint firstItem="x4w-M4-Qzq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jeJ-3K-wT6"/>
-                <constraint firstItem="x4w-M4-Qzq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="kPm-w3-O1d"/>
-                <constraint firstItem="Ymu-7h-EyA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="oDw-to-W98"/>
+                <constraint firstItem="Ymu-7h-EyA" firstAttribute="top" secondItem="x4w-M4-Qzq" secondAttribute="top" id="beM-OJ-wsk"/>
+                <constraint firstItem="Ymu-7h-EyA" firstAttribute="bottom" secondItem="x4w-M4-Qzq" secondAttribute="centerY" id="eXZ-51-noF"/>
+                <constraint firstItem="X9A-KJ-Mpw" firstAttribute="top" secondItem="8np-gj-3s0" secondAttribute="bottom" id="iaJ-Ot-Zxr"/>
+                <constraint firstItem="x4w-M4-Qzq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="2" id="jTZ-rx-KFF"/>
+                <constraint firstItem="8np-gj-3s0" firstAttribute="top" secondItem="x4w-M4-Qzq" secondAttribute="centerY" id="krW-E6-hjE"/>
+                <constraint firstItem="8np-gj-3s0" firstAttribute="trailing" secondItem="Ymu-7h-EyA" secondAttribute="trailing" id="v1o-GB-R3s"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-59.5" y="-303.5"/>
+            <point key="canvasLocation" x="-362" y="-418"/>
         </view>
     </objects>
     <resources>
