--- a/QiscusUI/Controllers/Chat View/UIChatNavigation.xib
+++ b/QiscusUI/Controllers/Chat View/UIChatNavigation.xib
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatTitleView" customModule="QiscusUI" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIChatNavigation" customModule="QiscusUI" customModuleProvider="target">
             <connections>
-                <outlet property="imageViewAvatar" destination="x4w-M4-Qzq" id="NPp-wz-E4Z"/>
-                <outlet property="labelSubtitle" destination="8np-gj-3s0" id="SI7-TJ-YBq"/>
-                <outlet property="labelTitle" destination="Ymu-7h-EyA" id="4b1-6b-QKV"/>
+                <outlet property="imageViewAvatar" destination="x4w-M4-Qzq" id="TvU-KZ-gJv"/>
+                <outlet property="labelSubtitle" destination="8np-gj-3s0" id="if8-Ua-j4G"/>
+                <outlet property="labelTitle" destination="Ymu-7h-EyA" id="AJ6-xN-fAQ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
